--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# dpl v2
+# https://docs.travis-ci.com/user/deployment-v2
+
 language: node_js
 
 node_js:
@@ -19,14 +22,14 @@ before_deploy:
 
 deploy:
   - provider: npm
-    skip_cleanup: true
     email: $NPM_EMAIL
-    api_key: $NPM_TOKEN
+    api_token: $NPM_TOKEN
+    edge: true
     on:
       tags: true
   - provider: releases
-    skip_cleanup: true
-    api_key: $GITHUB_TOKEN
+    token: $GITHUB_TOKEN
+    edge: true
     on:
       tags: true
 
