chore 修改 travis-ci 配置，GitHub Release 不上传任何文件

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ deploy:
       tags: true
   - provider: releases
     token: $GITHUB_TOKEN
+    file: x
     edge: true
     on:
       tags: true
