--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint": "^6.8.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
+    "eslint-plugin-babel": "^5.3.0",
     "glob": "^7.1.6",
     "husky": "^4.2.1",
     "lint-staged": "^10.0.7",
