--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "main": "base.js",
   "files": [
-    "base.js"
+    "base.js",
+    "babel.js"
   ],
   "homepage": "https://github.com/ttionya/eslint-config",
   "repository": {
@@ -32,6 +33,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
+    "cp-file": "^7.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "glob": "^7.1.6",
     "husky": "^4.2.1",
