chore 新增 npm link 以便使用自己生成的配置测试

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,15 @@ branches:
     - master
     - /^v\d+\.\d+\.\d+.*$/
 
+before_install:
+  - npm link
+
 install:
   - npm ci
+  - npm link @ttionya/eslint-config
 
 script:
   - npm run test
-
-before_deploy:
-  - cp ./dist/* .
 
 deploy:
   - provider: npm
